examples/test/testpolicy132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy132
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key5: value11
      key6: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value19
          key31: value38
      podSelector:
        matchLabels:
          key23: value28
          key49: value3
          key22: value21
